BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/EM_Attendee_vod__c.object
<CustomObject>
    <description>Attendees at activities for Veeva Events Management
SW changed to Audience for HCPTS Core Build 07/2015</description>
    <fields>
        <fullName>Account_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Account acting as an Attendee.</description>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>EM_Attendee_Account_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Activity_Type_HCPTS__c</fullName>
        <description>This picklist value is set by code/trigger to match the Developer name of Activity Record type. Activity recordtype dev names should not be changed</description>
        <inlineHelpText>This picklist value is set by code/trigger to match the Developer name of Activity Record type. Activity recordtype dev names should not be changed</inlineHelpText>
        <label>Activity Type</label>
        <picklist>
            <picklistValues>
                <fullName>Advisory_Board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exhibits_Booths_and_Displays</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HCP_Sponsorship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal_Speaking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other_Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preceptorship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R_D_Committee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Speaker_Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Speaker_Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard_Rep_Presentation</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Address_Line_1_vod__c</fullName>
        <description>Used to store the attendee&apos;s street address.</description>
        <label>Address Line 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_2_vod__c</fullName>
        <description>Used to store the attendee&apos;s street address.</description>
        <label>Address Line 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ariba_SOW_Number_HCPTS__c</fullName>
        <description>Ariba SOW Number</description>
        <label>Ariba SOW Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendee_Name_vod__c</fullName>
        <description>Text field to store the name of an attendee. Used for entering non-system attendees. If an account, user, or contact is listed as an attendee, this field populates automatically.</description>
        <label>Attendee Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendee_Type_vod__c</fullName>
        <description>This field defines what type of Attendee has been selected for the Event. This formula can be modified to meet the naming conventions of a Customer&apos;s organization.</description>
        <formula>IF(NOT(ISBLANK(Account_vod__c)), $Label.ACCOUNT_vod, 
                IF(NOT(ISBLANK(Contact_vod__c)), $Label.CONTACT_vod, 
                IF(NOT(ISBLANK(User_vod__c)), $Label.USER_vod, 
                IF(NOT(ISBLANK(TEXT(Walk_In_Status_vod__c))), $Label.WALK_IN_vod, 
                $Label.ONLINE_REGISTRANT_vod))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attendee Type OOTB</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Audience_Type_HCPTS__c</fullName>
        <label>Legacy Audience Type</label>
        <picklist>
            <picklistValues>
                <fullName>HCP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMS Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nurse Practitioner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pharmacist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technician</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alliance Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Journalist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patient</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patient Advocacy Group</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Audience_Type_Simple_Formula_HCPTS__c</fullName>
        <description>Formula field evaluates to HCP, HCO or Employee value depending on Attendee data and relationship to User or Account or blank for Contact table</description>
        <formula>CASE(1, IF(NOT(ISBLANK(User_vod__c)), 1, 0),  $Label.Audience_Provider_Type_Employee 
       , IF(NOT(ISBLANK(Contact_vod__c)), 1, 0),  &apos;&apos;
       , IF(AND(NOT(ISBLANK(Account_vod__c)),Account_vod__r.IsPersonAccount ), 1, 0), $Label.Audience_Provider_Type_HCP
       , IF(AND(NOT(ISBLANK(Account_vod__c)),NOT(Account_vod__r.IsPersonAccount) ), 1, 0), $Label.Audience_Provider_Type_HCO
       , &apos;&apos;
     )</formula>
        <inlineHelpText>Formula field evaluates to HCP, HCO or Employee value depending on Attendee data and relationship to User or Account or blank for Contact</inlineHelpText>
        <label>Attendee Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Can_Generate_Contract__c</fullName>
        <label>Can Generate Contract</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_HCPTS__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_vod__c</fullName>
        <description>Used to store the attendee&apos;s city.</description>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Contact attending the event.</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>EM_Attendee_Contact_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Party_HCPTS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contract Party reference to which this Letter will need to be sent</description>
        <inlineHelpText>Contract Party reference to which this Letter will need to be sent</inlineHelpText>
        <label>Contract Party</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>$Source.Account_vod__c</field>
                <operation>equals</operation>
                <valueField>EM_Vendor_vod__c.Account_vod__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.Account_vod__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <infoMessage>If the Contract Party &amp; Audience Customer references must match if they exist</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>EM_Vendor_vod__c</referenceTo>
        <relationshipName>Audience</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Party_Name_HCPTS__c</fullName>
        <description>By default, this is the same as Attendee Name/HCP Name if Attendee is an Account/Customer. The user however can update/override this to another name if they so wish</description>
        <inlineHelpText>By default, this is the same as Attendee Name/HCP Name if Attendee is an Account/Customer. The user however can update/override this to another name if they so wish</inlineHelpText>
        <label>Contract Party Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Subtype_HCPTS__c</fullName>
        <description>Contract Subtype</description>
        <label>Contract Subtype</label>
        <picklist>
            <picklistValues>
                <fullName>Sponsorship to Congress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attendee for Preceptorship</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract_Type_HCPTS__c</fullName>
        <description>Contract Type</description>
        <label>Contract Type</label>
        <picklist>
            <picklistValues>
                <fullName>Sponsorship</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Country_HCPTS__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_ref_HCPTS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The reference to Country. Needs to be populated to do Sponsorship Letter template lookup.</description>
        <inlineHelpText>Provide two digit country code for the Attendee.</inlineHelpText>
        <label>Country Reference</label>
        <referenceTo>Country_vod__c</referenceTo>
        <relationshipLabel>Attendee</relationshipLabel>
        <relationshipName>Audience</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Created_By_HCTPS__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;+CreatedById, CreatedBy.FirstName + &quot; &quot; + CreatedBy.LastName) + &quot;, &quot; + 
TEXT(MONTH(DATEVALUE(CreatedDate )))+&quot;/&quot;+TEXT(DAY(DATEVALUE(CreatedDate )))+&quot;/&quot;+TEXT(YEAR(DATEVALUE(CreatedDate )))</formula>
        <label>Created By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credentials_vod__c</fullName>
        <description>Attendee Credentials. If the attendee is an Account, this data is copied from the Credentials_vod field on the account.</description>
        <label>Credentials</label>
        <picklist>
            <picklistValues>
                <fullName>DO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RNP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Master_ID_HCPTS__c</fullName>
        <formula>Account_vod__r.BP_ID_BMS_CORE__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Global Customer Master ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESVisible_HCPTS__c</fullName>
        <formula>IF(TEXT(Sponsorship_Letter_HCPTS__r.Status_vod__c)=&apos;Activated_vod&apos;,&apos;0&apos;,&apos;1&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ESVisible_HCPTS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_HCPTS__c</fullName>
        <formula>Account_vod__r.PersonEmail</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_vod__c</fullName>
        <description>Used to store the attendee&apos;s email address.</description>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Employer_Consent_Required_HCPTS__c</fullName>
        <description>Yes indicates that this Attendee requires Employer Consent.</description>
        <inlineHelpText>Yes indicates that this Attendee requires Employer Consent.</inlineHelpText>
        <label>Employer Consent Required?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Employer_Consent_Status_HCPTS__c</fullName>
        <description>Specify status of EC capture stage/step</description>
        <inlineHelpText>Specify status of EC capture stage/step</inlineHelpText>
        <label>Employer Consent Status</label>
        <picklist>
            <picklistValues>
                <fullName>Sent for Signature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>End_Time_vod__c</fullName>
        <description>End time of the event</description>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Entity_Reference_Id_vod__c</fullName>
        <description>ID of object associated with the attendee such as an account.</description>
        <label>Entity Reference Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The activity that the attendee has been invited to.</description>
        <label>Activity</label>
        <referenceTo>EM_Event_vod__c</referenceTo>
        <relationshipName>EM_Attendee_Event_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_ID_vod__c</fullName>
        <description>External ID.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>First_Name_vod__c</fullName>
        <label>First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Furigana_vod__c</fullName>
        <description>Firigana for Japanese name. If the attendee is an Account, this data is copied from the Furigana field on the account.</description>
        <label>Furigana</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <picklist>
            <picklistValues>
                <fullName>en_US</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>de</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>es</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>fr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>it</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ja</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ko</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>pt_BR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>nl_NL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>da</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>fi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>es_MX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>no</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>hu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>pl</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>in</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iw</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>el</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>bg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>en_GB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>pt_PT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>hr</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By_HCPTS__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;+LastModifiedById, LastModifiedBy.FirstName + &quot; &quot; + LastModifiedBy.LastName) + &quot;, &quot; + 
TEXT(MONTH(DATEVALUE(LastModifiedDate)))+&quot;/&quot;+TEXT(DAY(DATEVALUE(LastModifiedDate)))+&quot;/&quot;+TEXT(YEAR(DATEVALUE(LastModifiedDate)))</formula>
        <label>Last Modified By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name_vod__c</fullName>
        <description>Used to store the attendee&apos;s last name</description>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meal_Opt_In_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to indicate if an attendee has opted in to receiving a meal.</description>
        <label>Meal Opt In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Meal_Preference_vod__c</fullName>
        <description>Meal preference of an attendee. Custom values can be added to this picklist.</description>
        <label>Meal Preference</label>
        <picklist>
            <picklistValues>
                <fullName>Vegetarian</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mobile_ID_vod__c</fullName>
        <description>Field used by mobile products for synchronization.</description>
        <externalId>true</externalId>
        <label>Mobile ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Number_of_Signers_HCPTS__c</fullName>
        <label>Number of Signers</label>
        <summaryForeignKey>Audience_Contract_Signer_HCPTS__c.Audience__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Online_Registration_Status_vod__c</fullName>
        <description>This field is populated automatically to &quot;Needs Reconciliation&quot; when a person is registered for an event via the Veeva Attendee API. The status can be set manually via this API, and is also set through the user interface when an online event registrant is reconciled to a CRM record.</description>
        <label>Online Registration Status</label>
        <picklist>
            <picklistValues>
                <fullName>Needs_Reconciliation_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reconciled_To_Existing_Account_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reconciled_To_Existing_User_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reconciled_To_New_Account_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dismissed_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <description>Organization name of the attendee</description>
        <label>Organization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_vod__c</fullName>
        <description>The organization an attendee is representing.</description>
        <label>Organization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Override_Lock_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Helper field for data loads.</description>
        <label>Override Lock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone_HCPTS__c</fullName>
        <formula>Account_vod__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_vod__c</fullName>
        <description>Used to store the attendee&apos;s phone number.</description>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Prescriber_vod__c</fullName>
        <description>Indicates if an attendee is a prescriber or not.</description>
        <label>Prescriber</label>
        <picklist>
            <picklistValues>
                <fullName>Yes_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Professional_ID_HCPTS__c</fullName>
        <description>Professional ID</description>
        <label>Professional ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_Status_HCPTS__c</fullName>
        <description>Status updated by Logistics provider based on attendee response. Not editable.</description>
        <inlineHelpText>Status updated by Logistics provider based on attendee response. Not editable.</inlineHelpText>
        <label>Registration Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_ICF_HCPTS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related ICF (Previously collected)</label>
        <referenceTo>Information_Collection_Form__c</referenceTo>
        <relationshipName>Audience</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Type_HCPTS__c</fullName>
        <description>Service Type</description>
        <label>Service Type</label>
        <picklist>
            <picklistValues>
                <fullName>Speaker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chairperson / Moderator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Congress Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trainer / Educator</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Signature_Datetime_vod__c</fullName>
        <description>Stores the Datetime of when the Signature was captured</description>
        <label>Signature Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Signature_vod__c</fullName>
        <description>Used to store the Signature.</description>
        <label>Signature</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Signee_vod__c</fullName>
        <description>The name of the person signing for event attendance.</description>
        <label>Signee</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Specialty_HCPTS__c</fullName>
        <formula>Account_vod__r.Specialty_BMS_EMEA__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Specialty</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sponsorship_Letter_HCPTS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sponsorship Letter</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contract_vod__c.Service_Type_HCPTS__c</field>
                <operation>equals</operation>
                <value>Sponsorship</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contract_vod__c</referenceTo>
        <relationshipName>Audience</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Time_vod__c</fullName>
        <description>Start time of the event</description>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>State_HCPTS__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_vod__c</fullName>
        <description>Status of the person invited to the medical event.</description>
        <label>Veeva Status</label>
        <picklist>
            <picklistValues>
                <fullName>Nominated_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invited_vod</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attended_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Signed_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cleared_Signature_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Walked In/Attended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Did not Attend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Stub_Mobile_Id_vod__c</fullName>
        <description>System field used by mobile products to aid synchronization.</description>
        <externalId>true</externalId>
        <label>Stub Mobile Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Stub_SFDC_Id_vod__c</fullName>
        <description>System field used by mobile products to aid synchronization.</description>
        <externalId>true</externalId>
        <label>Stub SFDC Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Tax_Id_HCPTS__c</fullName>
        <label>Tax Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Id_Type_HCPTS__c</fullName>
        <description>Type of Tax Id</description>
        <inlineHelpText>Type of Tax Id</inlineHelpText>
        <label>Tax Id Type</label>
        <picklist>
            <picklistValues>
                <fullName>EIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ITIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SSN</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Title_Formula_HCPTS__c</fullName>
        <formula>Account_vod__r.Title_formula_BMS_EMEA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_vod__c</fullName>
        <description>Speaker Title. If the speaker is an Account, this data is copied from the PersonTitle field on the account.</description>
        <label>Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The User attending the event.</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>EM_Attendee_User_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vessel_Number_vod__c</fullName>
        <description>Used to store travel details, such as a flight or train number.</description>
        <label>Vessel Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>View_Online_HCPTS__c</fullName>
        <description>Clicking this link displays the Standard page to the user. Useful to perform Contracting operations like Generate Contract, ICF etc</description>
        <formula>HYPERLINK(&apos;/&apos; &amp; Id &amp; &apos;?nooverride=1&apos;, $Label.View_Standard_Detail_Page ,&quot;_self&quot;)</formula>
        <inlineHelpText>Clicking this link displays the Standard page to the user. Useful to perform Contracting operations like Generate Contract, ICF etc</inlineHelpText>
        <label>View Contracting Buttons</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Walk_In_Reference_ID_vod__c</fullName>
        <description>Reference ID of the person associated with the reconciled attendee. Required for backend attendee reconciliation process.</description>
        <label>Walk In Reference ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Walk_In_Status_vod__c</fullName>
        <description>Used to track the status of walk-in attendees at an event.</description>
        <label>Walk-In Status</label>
        <picklist>
            <picklistValues>
                <fullName>Needs_Reconciliation_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reconciled_To_Existing_Account_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reconciled_To_Existing_User_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reconciled_To_New_Account_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dismissed_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Zip_Code_HCPTS__c</fullName>
        <label>Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_vod__c</fullName>
        <description>Used to store the attendee&apos;s zip code.</description>
        <label>Zip</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Attendee</label>
    <listViews>
        <fullName>Account_Audience_Records</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Event_vod__c</columns>
        <columns>Attendee_Name_vod__c</columns>
        <columns>Specialty_HCPTS__c</columns>
        <columns>Address_Line_1_vod__c</columns>
        <columns>Status_vod__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_vod__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Account Audience Records</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Event_vod__c</columns>
        <columns>Attendee_Name_vod__c</columns>
        <columns>Account_vod__c</columns>
        <columns>Specialty_HCPTS__c</columns>
        <columns>Status_vod__c</columns>
        <columns>Address_Line_1_vod__c</columns>
        <columns>City_vod__c</columns>
        <columns>City_HCPTS__c</columns>
        <columns>Zip_vod__c</columns>
        <columns>State_HCPTS__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
</CustomObject>